feat(backend): 本地轮询落本地 + 批量下载修复 + 登录会话持久化
本地轮询结果统一落本地 D:/AiResult（canvas/aplus/tasks/models），不再走 OSS；新增 /ai-result/** 静态服务同源加载

任务大盘/A+ 批量下载 ZIP：本地环境(dev profile)改走 KIE 临时地址 resultTempUrl，规避 resultOssUrl 被改写为相对路径 /ai-result/... 导致 okhttp 抓取失败

登录会话 UserSession 持久化，修复登录失效循环

AI 画布：模型参数透传(normalizeImageModel)、默认分辨率 2k、移除 quality、新增计费显示

文档 README 从 static 移至 resources/docs；.gitignore 忽略所有 profile yml 防生产密钥泄露

清理 skills 下误嵌入的嵌套 .git 仓库